[gd_scene load_steps=2 format=3 uid="uid://i2jno0sxm6uy"]

[ext_resource type="Script" path="res://Codes/Menus/menu_principal.gd" id="1_y3ien"]

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y3ien")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -50.5
offset_right = 32.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Continuer" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continuer"

[node name="NouvellePartie" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Nouvelle Partie"

[node name="Option" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Option"

[node name="QUITTER" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quitter
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Continuer" to="." method="_on_continuer_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/NouvellePartie" to="." method="_on_nouvelle_partie_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QUITTER" to="." method="_on_quitter_pressed"]
